exercises from class

--- a/example1/html/products.html
+++ b/example1/html/products.html
@@ -16,7 +16,7 @@
         </nav>
       </header>
       <div id="main">
-      	<img src="img/coffee.jpg" alt="" />
+        <h2>these are the products</h2>
       </div>
       <div id="footer">
       <nav>
